# langgraph-deployment-kit

./: .env.example  LICENSE  README.md  pyproject.toml
agent-react-hook/: .gitignore  .npmrc  README.md  package-lock.json  package.json  webpack.config.js
agent-react-hook/.github/workflows/: publish-to-github.yml  publish.yml
agent-react-hook/src/: index.js
examples/useagenthookexample/: package-lock.json  package.json
examples/useagenthookexample/src/: App.css  App.jsx
src/: run_service.py
src/agents/: agents.py  research_assistant.py
src/core/: __init__.py  settings.py  telemetry.py
src/schema/: __init__.py  models.py  schema.py
src/service/: service.py
tests/: standalone_test.py
tests/core/: test_settings.py
tests/integration/: test_docker_e2e.py
tests/service/: conftest.py  test_service.py  test_simplified.py
